// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Helptooltips Components renders AddGroup correctly 1`] = `
NodeList [
  <h3>
    Device groups
  </h3>,
  <p>
    It is possible to create groups of devices. Once you have created a group and added one or more devices to it, you can deploy an update to that specific group only.
  </p>,
  <p>
    To avoid accidents, Mender only allows a device to be in one group at the time.
  </p>,
  <p>
    You can find out additional information about device groups in 
    <a
      href="/help/devices"
    >
      the help section
    </a>
    .
  </p>,
]
`;

exports[`Helptooltips Components renders ArtifactUpload correctly 1`] = `Upload an Artifact to an existing or new Release`;

exports[`Helptooltips Components renders AttributeLimit correctly 1`] = `
NodeList [
  Expand to see the list of attributes currently in use. Please,
   ,
  <a
    href="mailto:contact@mender.io"
    rel="noopener noreferrer"
    target="_blank"
  >
    contact our team
  </a>,
   ,
  if your use case requires a different set of attributes.,
]
`;

exports[`Helptooltips Components renders AuditlogExplanation correctly 1`] = `The audit log shows the history of changes made to your Devices, Artifacts, Deployments, and user management.`;

exports[`Helptooltips Components renders AuthButton correctly 1`] = `
NodeList [
  <h3>
    Authorize devices
  </h3>,
  <p>
    Expand this section to view the authentication options for this device. You can decide whether to accept it, reject it, or just dismiss this device for now.
  </p>,
  <p>
    See the documentation for more on 
    <a
      class=""
      href="https://docs.mender.io/overview/device-authentication"
      rel="noopener noreferrer"
      target="_blank"
    >
      Device authentication
    </a>
    .
  </p>,
]
`;

exports[`Helptooltips Components renders AuthExplainButton correctly 1`] = `
NodeList [
  <h3>
    Device authorization status
  </h3>,
  <p>
    Each device sends an authentication request containing its identity attributes and its current public key. You can accept, reject or dismiss these requests to determine the authorization status of the device.
  </p>,
  <p>
    In cases such as key rotation, each device may have more than one identity/key combination listed. See the documentation for more on
     
    <a
      class=""
      href="https://docs.mender.io/overview/device-authentication"
      rel="noopener noreferrer"
      target="_blank"
    >
      Device authentication
    </a>
    .
  </p>,
]
`;

exports[`Helptooltips Components renders ConfigureAddOnTip correctly 1`] = `
<p>
  Mender deploys the configuration attributes using the same mechanisms as software updates. The configuration is stored as a JSON file at
  <code>
    /var/lib/mender-configure/device-config.json
  </code>
   on the device and then all the scripts in
   
  <code>
    /usr/lib/mender-configure/apply-device-config.d/
  </code>
   are executed to apply the configuration attributes. To add a new configuration attribute, you simply need to input it in the UI and add a script to that directory that applies it accordingly.
</p>
`;

exports[`Helptooltips Components renders ConfigureRaspberryLedTip correctly 1`] = `
NodeList [
  To see the effects of applying a configuration to your device you can set one of the below values to modify the behaviour of your Raspberry Pi green status LED,
  .emotion-0 .key>b {
  background-color: #f7f7f7;
  color: rgba(0, 0, 0, 0.87);
}

.emotion-1 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 1.1607rem;
  color: #337a87;
}

.emotion-1 iconButton {
  margin-right: 8px;
}

<div
    class="break-all two-columns emotion-0 compact column-data margin-top-small margin-bottom-small"
  >
    <div
      class="align-right key muted"
    >
      <b>
        mmc0
      </b>
    </div>
    <div
      class="flexbox clickable"
    >
      <div
        title="The default, which blinks the led on storage activity"
      >
        The default, which blinks the led on storage activity
      </div>
      <svg
        aria-hidden="true"
        aria-label="Copy to clipboard"
        class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeSmall margin-left-small fadeOut emotion-1"
        data-mui-internal-clone-element="true"
        data-testid="FileCopyOutlinedIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12V1zm-1 4H8c-1.1 0-1.99.9-1.99 2L6 21c0 1.1.89 2 1.99 2H19c1.1 0 2-.9 2-2V11l-6-6zM8 21V7h6v5h5v9H8z"
        />
      </svg>
    </div>
    <div
      class="align-right key muted"
    >
      <b>
        on
      </b>
    </div>
    <div
      class="flexbox clickable"
    >
      <div
        title="Turn on the light permanently"
      >
        Turn on the light permanently
      </div>
      <svg
        aria-hidden="true"
        aria-label="Copy to clipboard"
        class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeSmall margin-left-small fadeOut emotion-1"
        data-mui-internal-clone-element="true"
        data-testid="FileCopyOutlinedIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12V1zm-1 4H8c-1.1 0-1.99.9-1.99 2L6 21c0 1.1.89 2 1.99 2H19c1.1 0 2-.9 2-2V11l-6-6zM8 21V7h6v5h5v9H8z"
        />
      </svg>
    </div>
    <div
      class="align-right key muted"
    >
      <b>
        off
      </b>
    </div>
    <div
      class="flexbox clickable"
    >
      <div
        title="Turn off the light permanently"
      >
        Turn off the light permanently
      </div>
      <svg
        aria-hidden="true"
        aria-label="Copy to clipboard"
        class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeSmall margin-left-small fadeOut emotion-1"
        data-mui-internal-clone-element="true"
        data-testid="FileCopyOutlinedIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12V1zm-1 4H8c-1.1 0-1.99.9-1.99 2L6 21c0 1.1.89 2 1.99 2H19c1.1 0 2-.9 2-2V11l-6-6zM8 21V7h6v5h5v9H8z"
        />
      </svg>
    </div>
    <div
      class="align-right key muted"
    >
      <b>
        heartbeat
      </b>
    </div>
    <div
      class="flexbox clickable"
    >
      <div
        title="Enable heartbeat blinking"
      >
        Enable heartbeat blinking
      </div>
      <svg
        aria-hidden="true"
        aria-label="Copy to clipboard"
        class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeSmall margin-left-small fadeOut emotion-1"
        data-mui-internal-clone-element="true"
        data-testid="FileCopyOutlinedIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12V1zm-1 4H8c-1.1 0-1.99.9-1.99 2L6 21c0 1.1.89 2 1.99 2H19c1.1 0 2-.9 2-2V11l-6-6zM8 21V7h6v5h5v9H8z"
        />
      </svg>
    </div>
  </div>,
  There are other possible values, but we won't advertise them here. See,
  <a
    href="http://www.d3noob.org/2020/07/controlling-activity-led-on-raspberry-pi.html"
    rel="noopener noreferrer"
    target="_blank"
  >
    this blog post
  </a>,
   ,
  or,
   ,
  <a
    href="https://www.raspberrypi.org/forums/viewtopic.php?t=273194#p1658930"
    rel="noopener noreferrer"
    target="_blank"
  >
    in the Raspberry Pi forums
  </a>,
   ,
  for more information.,
]
`;

exports[`Helptooltips Components renders ConfigureTimezoneTip correctly 1`] = `
NodeList [
  To see the effects of applying a configuration to your device you can set one of the below values to modify the timezone of your device. While all values from ,
  <i>
    timedatectl list-timezones
  </i>,
   will work, to easily see the impact of the changed value you can use one of the following values:,
  <ul>
    <li>
      Europe/Oslo
    </li>
    <li>
      America/Los_Angeles
    </li>
    <li>
      Asia/Tokyo
    </li>
  </ul>,
  Once the configuration has been applied you can see the effect by opening the Remote Terminal to the device and executing the ,
  <i>
    date
  </i>,
   command.,
]
`;

exports[`Helptooltips Components renders DashboardWidget correctly 1`] = `Add dashboard widgets to visualize the software distribution or geographical location of all your devices, or a group of your devices.`;

exports[`Helptooltips Components renders DeviceSupportTip correctly 1`] = `
<p>
  The steps in the guide should work on most operating systems in the Debian family (e.g. Debian, Ubuntu, Raspberry Pi OS) and devices based on ARMv6 or newer (e.g. Raspberry Pi 2/3/4, Beaglebone). Visit 
  <a
    class=""
    href="https://docs.mender.io/overview/device-support"
    rel="noopener noreferrer"
    target="_blank"
  >
    our documentation
  </a>
   for more information about device support.
</p>
`;

exports[`Helptooltips Components renders DeviceTypeTip correctly 1`] = `
NodeList [
  <p>
    If you don't see your exact device on the list, choose 
    <i>
      Generic ARMv6 or newer
    </i>
     to continue the tutorial for now.
  </p>,
  <p>
    (Note: if your device is 
    <i>
      not
    </i>
     based on ARMv6 or newer, the tutorial won't work - instead, go back and use the virtual device)
  </p>,
]
`;

exports[`Helptooltips Components renders ExpandArtifact correctly 1`] = `
NodeList [
  <h3>
    Device type compatibility
  </h3>,
  <p>
    Mender Artifacts have 
    <b>
      Device types compatible
    </b>
     as part of their metadata. All devices report which device type they are, as part of their inventory information. During a deployment, Mender makes sure that a device will only download and install an Artifact it is compatible with.
  </p>,
  <p>
    You can click on each Artifact in the Release to expand the row and view more information about it.
  </p>,
  <p>
    For more information on how to specify the device type compatibility and other artifact metadata,
     
    <a
      class=""
      href="https://docs.mender.io/artifact-creation/create-an-artifact"
      rel="noopener noreferrer"
      target="_blank"
    >
      see the documentation
    </a>
    .
  </p>,
]
`;

exports[`Helptooltips Components renders ExpandDevice correctly 1`] = `
NodeList [
  <h3>
    Device inventory
  </h3>,
  <p>
    Mender automatically collects identity and inventory information from connected devices. You can view this information by clicking on a device to expand the row.
  </p>,
  <p>
    Which information is collected about devices is fully configurable;
     
    <a
      class=""
      href="https://docs.mender.io/client-installation/identity"
      rel="noopener noreferrer"
      target="_blank"
    >
      see the documentation for how to configure this
    </a>
    .
  </p>,
]
`;

exports[`Helptooltips Components renders ForceDeployment correctly 1`] = `
NodeList [
  <h3>
    Force update
  </h3>,
  <p>
    This will make the Mender client install the update even if the selected release is already installed.
  </p>,
]
`;

exports[`Helptooltips Components renders GlobalSettings correctly 1`] = `These settings apply to all users, so changes made here may affect other users' experience.`;

exports[`Helptooltips Components renders GroupDeployment correctly 1`] = `The deployment will skip any devices in the group that are already on the target Release version, or that have an incompatible device type.`;

exports[`Helptooltips Components renders MenderArtifactUpload correctly 1`] = `
NodeList [
  If there is no Release matching this Artifact’s name, a new Release will be created for this Artifact.,
  <br />,
  <br />,
  If there is already a Release matching this Artifact’s name, the Artifact will be grouped in that Release.,
]
`;

exports[`Helptooltips Components renders NameFilterTip correctly 1`] = `Filtering by name is limited to devices with a previously defined name.`;

exports[`Helptooltips Components renders NameTagTip correctly 1`] = `
NodeList [
  The ,
  <i>
    Name
  </i>,
   tag will be available as a device indentifier too.,
]
`;

exports[`Helptooltips Components renders PhasedPausedDeployments correctly 1`] = `
NodeList [
  This feature is not available on ,
  <b>
    phased deployments
  </b>,
  . If you'd like to set pause states between update steps, go back and adjust the rollout schedule to a ,
  <b>
    single phase
  </b>,
  .,
]
`;

exports[`Helptooltips Components renders ReleaseName correctly 1`] = `If a Release with this name already exists, this new Artifact may be grouped into a Release with other Artifacts of the same name - so long as they are compatible with different device types`;

exports[`Helptooltips Components renders ResetHistory correctly 1`] = `Greyed out items will not be considered during deployment roll out`;

exports[`Helptooltips Components renders SamlMetadata correctly 1`] = `Submit the metadata document from your Identity Provider`;

exports[`Helptooltips Components renders ScheduleDeployment correctly 1`] = `This time is relative to the server only – each device's time zone will not be taken into account. Devices across different time zones will receive the update at the same time.`;

exports[`Helptooltips Components renders SingleFileUpload correctly 1`] = `This will generate a single file application update Artifact, which requires some additional metadata to be entered.`;

exports[`Helptooltips Components renders TenantToken correctly 1`] = `
NodeList [
  <h3>
    Organization token
  </h3>,
  This token is unique for your organization and ensures that only devices that you own are able to connect to your account.,
]
`;

exports[`Helptooltips Components renders TwoFactorNote correctly 1`] = `
<div>
  Two Factor Authentication is enabled for your account. If you haven't set up a 3rd party authentication app with a verification code, please contact an administrator.
</div>
`;

exports[`Helptooltips Components renders Webhooks correctly 1`] = `Webhooks are triggered when a device's status is updated, or a device is decommissioned or provisioned.`;
